k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: warproject
  name: warproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: warproject
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: warproject
    spec:
      containers:
        - image: quay.io/rohanp/warproject:dev1
          imagePullPolicy: Always
          name: warproject
          ports:
            - containerPort: 8080
              protocol: TCP
              name: tcp-8080
