k8s/new-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: warproject1
  name: warproject1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: warproject1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: warproject1
    spec:
      containers:
        - image: quay.io/rohanp/warproject1:dev1
          imagePullPolicy: Always
          name: warproject
          ports:
            - containerPort: 8080
              protocol: TCP
              name : tcp-8080
