k8s/new-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: warproject1
  name: warproject1
spec:
  type: ClusterIP
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: warproject1
