k8s/new-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: warproject1
  name: warproject1
spec:
  port:
    targetPort: "tcp-8080"
  to:
    kind: Service
    name: warproject1
    weight: 100
  path: /WebApp
