k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: warproject
  name: warproject
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: warproject
    weight: 100
  Path: /WebApp
